Sat Sep 09 17:47:18 2000  George Lebl <jirka@5z.com>

	* menu.[ch], menu-properties.c, session.c, panel.c:  Add a way to
	  set up custom icon for any menu button.

Sat Sep 09 15:54:20 2000  George Lebl <jirka@5z.com>

	* menu.c:  Remove an old standing "UglyHack(tm)" and fix copying
	  to favourites even with merged menus etc.  It now copies only
	  the neccessary files as well and preserves old order files.

	* menu-fentry.c: just cosmetic cleanups

Tue Sep 05 21:22:55 2000  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c: When copying a config, copy all
	  the text fields.  This fixes a crash with revert recently reported
	  on gnome-devel-list.

Tue Sep 05 18:26:56 2000  George Lebl <jirka@5z.com>

	* Makefile.am: only touch the my_gnome_panel_idl if everything
	  went fine, especially not if orbit-idl failed

Tue Sep 05 17:10:33 2000  George Lebl <jirka@5z.com>

	* scroll-menu.c: make sure we call the leave_notify handler
	  when we really leave.  It still seems to be missing the case
	  of leave event from scroll button directly onto the root, but
	  god didn't intend for that to work right in the first place and
	  it's not really needed.

Tue Sep 05 01:17:32 2000  George Lebl <jirka@5z.com>

	* scroll-menu.c: when keyboard traversing, make sure we "show" the
	  currently selected item.

Mon Sep 04 16:01:50 2000  George Lebl <jirka@5z.com>

	* panel.c: apparently mozilla now will support _NETSCAPE_URL and
	  test/x-moz-url is supposed to be internal mozilla only.  So I
	  removed it again.

Mon Sep 04 15:47:53 2000  George Lebl <jirka@5z.com>

	* scroll-menu.c: fix the submenu / long menu interaction.

Mon Sep 04 02:56:57 2000  George Lebl <jirka@5z.com>

	* menu.c, foobar-widget.c, applet.c, scroll-menu.[ch], Makefile.am:
	  Make a GtkMenu subclass that handles very long menus.  When a
	  menu is larger then the screen, it makes "scroll buttons" on
	  bottom and top of menu sort of like windows does it (not quite