@@ -1,3 +1,12 @@
+Sat Sep 09 18:45:52 2000  George Lebl <jirka@5z.com>
+
+	* button-widget.[ch], panel_config_global.h,
+	  gnome-panel-properties.c, rgb-stuff.[ch], session.c:  Add a
+	  configuration flag that specifies if we are to use fast (nearest)
+	  or slow (hyperbolic) scaling for buttons.  hyperbolic is of
+	  course the default as it just looks really cool.  Maybe we should
+	  use bilinear though, not sure.
+
 Sat Sep 09 17:47:18 2000  George Lebl <jirka@5z.com>
 
 	* menu.[ch], menu-properties.c, session.c, panel.c:  Add a way to
